// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when me and no steps 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ECEEF2",
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#ffffff",
        },
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../assets/images/footprints.png",
        }
      }
      style={
        Object {
          "flexShrink": 1,
        }
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "AmaticSC-Bold",
          },
          Object {
            "color": "#007398",
            "fontSize": 42,
            "paddingTop": 10,
          },
        ]
      }
    >
      steps of faith
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#505256",
            "fontSize": 16,
            "paddingHorizontal": 70,
            "paddingVertical": 10,
            "textAlign": "center",
          },
        ]
      }
    >
      Your Steps of Faith will appear here.
    </Text>
  </View>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "bottom": 20,
        "left": 50,
        "position": "absolute",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="bottomButton"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#52C5DC",
              "height": 60,
              "justifyContent": "center",
            },
            null,
            Array [
              Object {
                "alignItems": "center",
                "height": 48,
                "width": 650,
              },
              undefined,
            ],
            Object {
              "borderRadius": 50,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "color": "#ffffff",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 1.5,
                  "textAlign": "center",
                },
                Array [
                  undefined,
                ],
              ],
            ]
          }
        >
          ADD A STEP OF FAITH
        </Text>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`renders correctly when no steps 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ECEEF2",
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#ffffff",
        },
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../assets/images/footprints.png",
        }
      }
      style={
        Object {
          "flexShrink": 1,
        }
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "AmaticSC-Bold",
          },
          Object {
            "color": "#007398",
            "fontSize": 42,
            "paddingTop": 10,
          },
        ]
      }
    >
      steps of faith
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#505256",
            "fontSize": 16,
            "paddingHorizontal": 70,
            "paddingVertical": 10,
            "textAlign": "center",
          },
        ]
      }
    >
      Your Steps of Faith with ben appear here.
    </Text>
  </View>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "bottom": 20,
        "left": 50,
        "position": "absolute",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="bottomButton"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#52C5DC",
              "height": 60,
              "justifyContent": "center",
            },
            null,
            Array [
              Object {
                "alignItems": "center",
                "height": 48,
                "width": 650,
              },
              undefined,
            ],
            Object {
              "borderRadius": 50,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "color": "#ffffff",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 1.5,
                  "textAlign": "center",
                },
                Array [
                  undefined,
                ],
              ],
            ]
          }
        >
          ADD A STEP OF FAITH
        </Text>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`renders correctly with completed steps 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ECEEF2",
      "flex": 1,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "paddingTop": 16,
      }
    }
    contentInset={
      Object {
        "bottom": 90,
      }
    }
    data={
      Array [
        Object {
          "data": Array [
            Object {
              "__typename": "Step",
              "community": Object {
                "__typename": "Community",
                "id": "3",
              },
              "completedAt": null,
              "id": "1",
              "receiver": Object {
                "__typename": "Person",
                "fullName": "Grace Dibbert",
                "id": "2",
              },
              "reminder": Object {
                "__typename": "StepReminder",
                "id": "4",
                "nextOccurrenceAt": "2016-01-26T19:10:10.481Z",
                "reminderType": "once",
              },
              "title": "Recusandae alias consequuntur corporis repellat ratione ut sunt.",
            },
          ],
          "key": "active",
        },
        Object {
          "data": Array [
            Object {
              "__typename": "Step",
              "community": Object {
                "__typename": "Community",
                "id": "7",
              },
              "completedAt": null,
              "id": "5",
              "receiver": Object {
                "__typename": "Person",
                "fullName": "Kaden Ortiz",
                "id": "6",
              },
              "reminder": Object {
                "__typename": "StepReminder",
                "id": "8",
                "nextOccurrenceAt": "2014-06-14T18:46:15.611Z",
                "reminderType": "once",
              },
              "title": "Quam ipsam nobis cupiditate sed dignissimos debitis incidunt accusantium.",
            },
          ],
          "key": "completed",
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onEndReachedThreshold={0.2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    refreshControl={
      <MyRefreshControl
        onRefresh={[Function]}
        refreshing={false}
      />
    }
    renderItem={[Function]}
    renderSectionFooter={[Function]}
    scrollEventThrottle={50}
    sections={
      Array [
        Object {
          "data": Array [
            Object {
              "__typename": "Step",
              "community": Object {
                "__typename": "Community",
                "id": "3",
              },
              "completedAt": null,
              "id": "1",
              "receiver": Object {
                "__typename": "Person",
                "fullName": "Grace Dibbert",
                "id": "2",
              },
              "reminder": Object {
                "__typename": "StepReminder",
                "id": "4",
                "nextOccurrenceAt": "2016-01-26T19:10:10.481Z",
                "reminderType": "once",
              },
              "title": "Recusandae alias consequuntur corporis repellat ratione ut sunt.",
            },
          ],
          "key": "active",
        },
        Object {
          "data": Array [
            Object {
              "__typename": "Step",
              "community": Object {
                "__typename": "Community",
                "id": "7",
              },
              "completedAt": null,
              "id": "5",
              "receiver": Object {
                "__typename": "Person",
                "fullName": "Kaden Ortiz",
                "id": "6",
              },
              "reminder": Object {
                "__typename": "StepReminder",
                "id": "8",
                "nextOccurrenceAt": "2014-06-14T18:46:15.611Z",
                "reminderType": "once",
              },
              "title": "Quam ipsam nobis cupiditate sed dignissimos debitis incidunt accusantium.",
            },
          ],
          "key": "completed",
        },
      ]
    }
    showsVerticalScrollIndicator={false}
    stickyHeaderIndices={
      Array [
        0,
        3,
      ]
    }
    stickySectionHeadersEnabled={true}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  >
    <RCTRefreshControl />
    <View>
      <View
        onLayout={[Function]}
        style={null}
      />
      <View
        onLayout={[Function]}
        style={null}
      >
        <StepItem
          showName={false}
          step={
            Object {
              "__typename": "Step",
              "community": Object {
                "__typename": "Community",
                "id": "3",
              },
              "completedAt": null,
              "id": "1",
              "receiver": Object {
                "__typename": "Person",
                "fullName": "Grace Dibbert",
                "id": "2",
              },
              "reminder": Object {
                "__typename": "StepReminder",
                "id": "4",
                "nextOccurrenceAt": "2016-01-26T19:10:10.481Z",
                "reminderType": "once",
              },
              "title": "Recusandae alias consequuntur corporis repellat ratione ut sunt.",
            }
          }
          testID="stepItem"
        />
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="completedStepsButton"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 60,
                  "justifyContent": "center",
                  "margin": 0,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                },
                null,
                Object {
                  "backgroundColor": "transparent",
                  "borderColor": "#A0A2A6",
                  "borderWidth": 1,
                  "height": 36,
                  "marginHorizontal": 68,
                  "marginVertical": 15,
                },
                Object {
                  "borderRadius": 50,
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Array [
                    Object {
                      "backgroundColor": "rgba(0,0,0,0)",
                      "color": "#ffffff",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 1.5,
                      "textAlign": "center",
                    },
                    Object {
                      "color": "#A0A2A6",
                      "fontSize": 14,
                      "letterSpacing": 1,
                      "lineHeight": 18,
                    },
                  ],
                ]
              }
            >
              HIDE COMPLETED STEPS
            </Text>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      />
      <View
        onLayout={[Function]}
        style={null}
      >
        <StepItem
          showName={false}
          step={
            Object {
              "__typename": "Step",
              "community": Object {
                "__typename": "Community",
                "id": "7",
              },
              "completedAt": null,
              "id": "5",
              "receiver": Object {
                "__typename": "Person",
                "fullName": "Kaden Ortiz",
                "id": "6",
              },
              "reminder": Object {
                "__typename": "StepReminder",
                "id": "8",
                "nextOccurrenceAt": "2014-06-14T18:46:15.611Z",
                "reminderType": "once",
              },
              "title": "Quam ipsam nobis cupiditate sed dignissimos debitis incidunt accusantium.",
            }
          }
          testID="stepItem"
        />
      </View>
      <View
        onLayout={[Function]}
        style={null}
      />
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
    </View>
  </RCTScrollView>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "bottom": 20,
        "left": 50,
        "position": "absolute",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="bottomButton"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#52C5DC",
              "height": 60,
              "justifyContent": "center",
            },
            null,
            Array [
              Object {
                "alignItems": "center",
                "height": 48,
                "width": 650,
              },
              undefined,
            ],
            Object {
              "borderRadius": 50,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "color": "#ffffff",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 1.5,
                  "textAlign": "center",
                },
                Array [
                  undefined,
                ],
              ],
            ]
          }
        >
          ADD A STEP OF FAITH
        </Text>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`renders correctly with steps 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ECEEF2",
      "flex": 1,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "paddingTop": 16,
      }
    }
    contentInset={
      Object {
        "bottom": 90,
      }
    }
    data={
      Array [
        Object {
          "data": Array [
            Object {
              "__typename": "Step",
              "community": Object {
                "__typename": "Community",
                "id": "3",
              },
              "completedAt": null,
              "id": "1",
              "receiver": Object {
                "__typename": "Person",
                "fullName": "Grace Dibbert",
                "id": "2",
              },
              "reminder": Object {
                "__typename": "StepReminder",
                "id": "4",
                "nextOccurrenceAt": "2016-01-26T19:10:10.481Z",
                "reminderType": "once",
              },
              "title": "Recusandae alias consequuntur corporis repellat ratione ut sunt.",
            },
          ],
          "key": "active",
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onEndReachedThreshold={0.2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    refreshControl={
      <MyRefreshControl
        onRefresh={[Function]}
        refreshing={false}
      />
    }
    renderItem={[Function]}
    renderSectionFooter={[Function]}
    scrollEventThrottle={50}
    sections={
      Array [
        Object {
          "data": Array [
            Object {
              "__typename": "Step",
              "community": Object {
                "__typename": "Community",
                "id": "3",
              },
              "completedAt": null,
              "id": "1",
              "receiver": Object {
                "__typename": "Person",
                "fullName": "Grace Dibbert",
                "id": "2",
              },
              "reminder": Object {
                "__typename": "StepReminder",
                "id": "4",
                "nextOccurrenceAt": "2016-01-26T19:10:10.481Z",
                "reminderType": "once",
              },
              "title": "Recusandae alias consequuntur corporis repellat ratione ut sunt.",
            },
          ],
          "key": "active",
        },
      ]
    }
    showsVerticalScrollIndicator={false}
    stickyHeaderIndices={
      Array [
        0,
      ]
    }
    stickySectionHeadersEnabled={true}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  >
    <RCTRefreshControl />
    <View>
      <View
        onLayout={[Function]}
        style={null}
      />
      <View
        onLayout={[Function]}
        style={null}
      >
        <StepItem
          showName={false}
          step={
            Object {
              "__typename": "Step",
              "community": Object {
                "__typename": "Community",
                "id": "3",
              },
              "completedAt": null,
              "id": "1",
              "receiver": Object {
                "__typename": "Person",
                "fullName": "Grace Dibbert",
                "id": "2",
              },
              "reminder": Object {
                "__typename": "StepReminder",
                "id": "4",
                "nextOccurrenceAt": "2016-01-26T19:10:10.481Z",
                "reminderType": "once",
              },
              "title": "Recusandae alias consequuntur corporis repellat ratione ut sunt.",
            }
          }
          testID="stepItem"
        />
      </View>
      <View
        onLayout={[Function]}
        style={null}
      />
    </View>
  </RCTScrollView>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "bottom": 20,
        "left": 50,
        "position": "absolute",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="bottomButton"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#52C5DC",
              "height": 60,
              "justifyContent": "center",
            },
            null,
            Array [
              Object {
                "alignItems": "center",
                "height": 48,
                "width": 650,
              },
              undefined,
            ],
            Object {
              "borderRadius": 50,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "color": "#ffffff",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 1.5,
                  "textAlign": "center",
                },
                Array [
                  undefined,
                ],
              ],
            ]
          }
        >
          ADD A STEP OF FAITH
        </Text>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`should paginate 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -40,10 +40,31 @@
                  \\"nextOccurrenceAt\\": \\"2016-01-26T19:10:10.481Z\\",
                  \\"reminderType\\": \\"once\\",
                },
                \\"title\\": \\"Recusandae alias consequuntur corporis repellat ratione ut sunt.\\",
              },
+             Object {
+               \\"__typename\\": \\"Step\\",
+               \\"community\\": Object {
+                 \\"__typename\\": \\"Community\\",
+                 \\"id\\": \\"7\\",
+               },
+               \\"completedAt\\": null,
+               \\"id\\": \\"5\\",
+               \\"receiver\\": Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"fullName\\": \\"Kaden Ortiz\\",
+                 \\"id\\": \\"6\\",
+               },
+               \\"reminder\\": Object {
+                 \\"__typename\\": \\"StepReminder\\",
+                 \\"id\\": \\"8\\",
+                 \\"nextOccurrenceAt\\": \\"2014-06-14T18:46:15.611Z\\",
+                 \\"reminderType\\": \\"once\\",
+               },
+               \\"title\\": \\"Quam ipsam nobis cupiditate sed dignissimos debitis incidunt accusantium.\\",
+             },
            ],
            \\"key\\": \\"active\\",
          },
        ]
      }
@@ -93,11 +114,32 @@
                  \\"id\\": \\"4\\",
                  \\"nextOccurrenceAt\\": \\"2016-01-26T19:10:10.481Z\\",
                  \\"reminderType\\": \\"once\\",
                },
                \\"title\\": \\"Recusandae alias consequuntur corporis repellat ratione ut sunt.\\",
+             },
+             Object {
+               \\"__typename\\": \\"Step\\",
+               \\"community\\": Object {
+                 \\"__typename\\": \\"Community\\",
+                 \\"id\\": \\"7\\",
+               },
+               \\"completedAt\\": null,
+               \\"id\\": \\"5\\",
+               \\"receiver\\": Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"fullName\\": \\"Kaden Ortiz\\",
+                 \\"id\\": \\"6\\",
+               },
+               \\"reminder\\": Object {
+                 \\"__typename\\": \\"StepReminder\\",
+                 \\"id\\": \\"8\\",
+                 \\"nextOccurrenceAt\\": \\"2014-06-14T18:46:15.611Z\\",
+                 \\"reminderType\\": \\"once\\",
                },
+               \\"title\\": \\"Quam ipsam nobis cupiditate sed dignissimos debitis incidunt accusantium.\\",
+             },
            ],
            \\"key\\": \\"active\\",
          },
        ]
      }
@@ -142,18 +184,57 @@
                  \\"id\\": \\"4\\",
                  \\"nextOccurrenceAt\\": \\"2016-01-26T19:10:10.481Z\\",
                  \\"reminderType\\": \\"once\\",
                },
                \\"title\\": \\"Recusandae alias consequuntur corporis repellat ratione ut sunt.\\",
+             }
+           }
+           testID=\\"stepItem\\"
+         />
+       </View>
+       <View
+         onLayout={[Function onLayout]}
+         style={null}
+       >
+         <StepItem
+           showName={false}
+           step={
+             Object {
+               \\"__typename\\": \\"Step\\",
+               \\"community\\": Object {
+                 \\"__typename\\": \\"Community\\",
+                 \\"id\\": \\"7\\",
+               },
+               \\"completedAt\\": null,
+               \\"id\\": \\"5\\",
+               \\"receiver\\": Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"fullName\\": \\"Kaden Ortiz\\",
+                 \\"id\\": \\"6\\",
+               },
+               \\"reminder\\": Object {
+                 \\"__typename\\": \\"StepReminder\\",
+                 \\"id\\": \\"8\\",
+                 \\"nextOccurrenceAt\\": \\"2014-06-14T18:46:15.611Z\\",
+                 \\"reminderType\\": \\"once\\",
+               },
+               \\"title\\": \\"Quam ipsam nobis cupiditate sed dignissimos debitis incidunt accusantium.\\",
              }
            }
            testID=\\"stepItem\\"
          />
        </View>
        <View
          onLayout={[Function onLayout]}
          style={null}
+       />
+       <View
+         style={
+           Object {
+             \\"height\\": 0,
+           }
+         }
        />
      </View>
    </RCTScrollView>
    <RCTSafeAreaView
      emulateUnlessSupported={true}"
`;
